objects/pepPepperCustomSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Hours__c</fullName>
        <label>Operating Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAF_Number__c</fullName>
        <description>This field will be use to store the PAF serviceability number and replaces the hardcoded number in the PAF OTP email.</description>
        <label>PAF Self Service Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAF_Selfservice_Email__c</fullName>
        <description>This field is use to save the PAF Selfserviceability email address in the email templates and will replace the hardcoded one in the OTP.</description>
        <label>PAF Selfservice Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PepperMoneyContact__c</fullName>
        <label>PepperMoneyContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acn__c</fullName>
        <label>acn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditbodyname__c</fullName>
        <label>creditbodyname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditbodyurl__c</fullName>
        <label>creditbodyurl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>displayname__c</fullName>
        <label>displayname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepAppEmailId__c</fullName>
        <label>pepAppEmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pepCall__c</fullName>
        <label>Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepPL_Biller_Code__c</fullName>
        <description>Use to hold PL Biller Code</description>
        <label>PL Biller Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>replyemailId__c</fullName>
        <label>replyemailId</label>
        <type>Email</type>
    </fields>
    <label>PepperCustomSetting</label>
</CustomObject>